[gd_scene load_steps=18 format=3 uid="uid://oq5r73rgk5ps"]

[ext_resource type="Texture2D" uid="uid://6aagdtaf1sfw" path="res://Images/MainMenu/BlueSky_HD.jpg" id="1_cp0ys"]
[ext_resource type="Script" uid="uid://cultu8nfi3tif" path="res://Scripts/MainMenu/click_to_start_picture.gd" id="2_trj04"]
[ext_resource type="FontFile" uid="uid://dseojunt8b3ga" path="res://Fonts/StalinistOne-Regular.ttf" id="2_yhxw7"]
[ext_resource type="Script" uid="uid://cfr3yjgmec82l" path="res://Scripts/MainMenu/click_to_start_button.gd" id="3_16hvj"]
[ext_resource type="AudioStream" uid="uid://bjhan6vo2jpdi" path="res://Audio/swoosh-6-351021.mp3" id="3_trj04"]
[ext_resource type="Texture2D" uid="uid://ceiuc4uujrby0" path="res://Images/MainMenu/IMG.png" id="4_16hvj"]
[ext_resource type="Script" uid="uid://5r16rbsuwemb" path="res://Scripts/MainMenu/text.gd" id="5_t1dhk"]
[ext_resource type="Theme" uid="uid://cc80vt60acelx" path="res://Themes/Main_Menu_Buttons.tres" id="5_vr1f0"]
[ext_resource type="Texture2D" uid="uid://dd58on0xjg4tl" path="res://Images/MainMenu/imgSIVA.jpg" id="6_t1dhk"]
[ext_resource type="Texture2D" uid="uid://b805xlr5mghjj" path="res://Icons/arrows.png" id="7_5egv6"]
[ext_resource type="FontFile" uid="uid://de647gnm3sexo" path="res://Fonts/BergamotOrnaments-3oK6.ttf" id="7_16hvj"]
[ext_resource type="Script" uid="uid://bk0shcf3ul7ob" path="res://Scripts/MainMenu/play.gd" id="10_vtepg"]
[ext_resource type="Script" uid="uid://fc2lago8y5do" path="res://Scripts/MainMenu/help.gd" id="11_8dnnj"]
[ext_resource type="AudioStream" uid="uid://cf5osgv40yj6n" path="res://Audio/game.mp3" id="12_t1dhk"]

[sub_resource type="Animation" id="Animation_16hvj"]
resource_name = "Fade"
loop_mode = 1
step = 0.0167
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 2.46229),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vr1f0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t1dhk"]
_data = {
&"Fade": SubResource("Animation_16hvj"),
&"RESET": SubResource("Animation_vr1f0")
}

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2

[node name="Click_to_Start_Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="Click_To_Start_Picture" type="TextureRect" parent="Click_to_Start_Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_cp0ys")
expand_mode = 1
script = ExtResource("2_trj04")

[node name="Click_To_Start_Button" type="Button" parent="Click_to_Start_Control/Click_To_Start_Picture"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
script = ExtResource("3_16hvj")

[node name="Text" type="RichTextLabel" parent="Click_to_Start_Control/Click_To_Start_Picture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -35.0
offset_right = 300.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_yhxw7")
theme_override_font_sizes/normal_font_size = 44
text = "  Click to start"
script = ExtResource("5_t1dhk")

[node name="Swoosh" type="AudioStreamPlayer2D" parent="Click_to_Start_Control/Click_To_Start_Picture"]
stream = ExtResource("3_trj04")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Click_to_Start_Control/Click_To_Start_Picture"]
libraries = {
&"": SubResource("AnimationLibrary_t1dhk")
}

[node name="Main_Menu_Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 1080.0
offset_right = 1920.0
offset_bottom = 2160.0

[node name="Main_Menu_Picture" type="TextureRect" parent="Main_Menu_Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_16hvj")
expand_mode = 1

[node name="MainOrnament" type="RichTextLabel" parent="Main_Menu_Control/Main_Menu_Picture"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 230.0
offset_right = 250.0
offset_bottom = 446.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("7_16hvj")
theme_override_font_sizes/normal_font_size = 135
text = "l"
fit_content = true
horizontal_alignment = 1

[node name="OrnamentsL" type="VBoxContainer" parent="Main_Menu_Control/Main_Menu_Picture"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -145.0
offset_right = -80.0
offset_bottom = 345.0
grow_vertical = 2

[node name="ornament1" type="RichTextLabel" parent="Main_Menu_Control/Main_Menu_Picture/OrnamentsL"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("7_16hvj")
theme_override_font_sizes/normal_font_size = 100
text = " XX"
fit_content = true

[node name="ornament2" type="RichTextLabel" parent="Main_Menu_Control/Main_Menu_Picture/OrnamentsL"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("7_16hvj")
theme_override_font_sizes/normal_font_size = 100
text = " XX"
fit_content = true

[node name="ornament3" type="RichTextLabel" parent="Main_Menu_Control/Main_Menu_Picture/OrnamentsL"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("7_16hvj")
theme_override_font_sizes/normal_font_size = 100
text = " XX"
fit_content = true

[node name="OrnamentsR" type="VBoxContainer" parent="Main_Menu_Control/Main_Menu_Picture"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -145.0
offset_right = 800.0
offset_bottom = 345.0
grow_horizontal = 0
grow_vertical = 2

[node name="ornament1" type="RichTextLabel" parent="Main_Menu_Control/Main_Menu_Picture/OrnamentsR"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("7_16hvj")
theme_override_font_sizes/normal_font_size = 100
text = " XX"
fit_content = true

[node name="ornament2" type="RichTextLabel" parent="Main_Menu_Control/Main_Menu_Picture/OrnamentsR"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("7_16hvj")
theme_override_font_sizes/normal_font_size = 100
text = " XX"
fit_content = true

[node name="ornament3" type="RichTextLabel" parent="Main_Menu_Control/Main_Menu_Picture/OrnamentsR"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("7_16hvj")
theme_override_font_sizes/normal_font_size = 100
text = " XX"
fit_content = true

[node name="V_Button_Container" type="VBoxContainer" parent="Main_Menu_Control/Main_Menu_Picture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -107.0
offset_right = 220.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="ButtonWrapper1" type="Control" parent="Main_Menu_Control/Main_Menu_Picture/V_Button_Container"]
custom_minimum_size = Vector2(420, 125)
layout_mode = 2
size_flags_horizontal = 0

[node name="Play" type="Button" parent="Main_Menu_Control/Main_Menu_Picture/V_Button_Container/ButtonWrapper1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_vr1f0")
text = "Play"
script = ExtResource("10_vtepg")

[node name="ButtonWrapper2" type="Control" parent="Main_Menu_Control/Main_Menu_Picture/V_Button_Container"]
custom_minimum_size = Vector2(420, 125)
layout_mode = 2
size_flags_horizontal = 0

[node name="Settings" type="Button" parent="Main_Menu_Control/Main_Menu_Picture/V_Button_Container/ButtonWrapper2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_vr1f0")
text = "Settings"

[node name="ButtonWrapper3" type="Control" parent="Main_Menu_Control/Main_Menu_Picture/V_Button_Container"]
custom_minimum_size = Vector2(420, 125)
layout_mode = 2
size_flags_horizontal = 0

[node name="Help" type="Button" parent="Main_Menu_Control/Main_Menu_Picture/V_Button_Container/ButtonWrapper3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_vr1f0")
text = "Help"
script = ExtResource("11_8dnnj")

[node name="Settings_Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 2160.0
offset_right = 1920.0
offset_bottom = 3240.0

[node name="Settings_Picture" type="TextureRect" parent="Settings_Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_t1dhk")
expand_mode = 1

[node name="Go_Back" type="Button" parent="Settings_Control/Settings_Picture"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -180.0
offset_right = 170.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
icon = ExtResource("7_5egv6")
icon_alignment = 1
expand_icon = true

[node name="RichTextLabel" type="RichTextLabel" parent="Settings_Control/Settings_Picture"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 55.0
offset_right = 500.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("2_yhxw7")
theme_override_font_sizes/normal_font_size = 100
text = "Settings
"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_t1dhk")
autoplay = true
parameters/looping = true
